# Lumos

./: .gitignore  .hpp  CMakeLists.txt  QUICKREF.md  README.md  build.py  hidden_content_extension.py  include_file_extension.py  lumos.py  mkdocs.yml  run.sh
.github/: copilot-instructions.md
antlr/: Lumos.g4  Lumos.pest
doc/: AST.drawio  函数.md  变量.md  宏.md  属性.md  异常处理.md  文件.md  格式化.md  语法.md  运算符.md
docs/: .pages  highlight.css  index.md  language.md  macro.md  mkdocs-test.md  overview.md  style.css  关于运行时不可变类.md
docs/assets/: highlight.css  script.js  style.css
docs/ast/: .pages  common.md  decl.md  expr.md  index.md  literal.md  named.md  parse.md  stat.md  statement.md  statment.md  type.md
docs/begin/: .pages  file.md  index.md
docs/examples/: .pages  arrays.md  closures.md  constraints.md  controlflow.md  exceptions.md  functions.md  helloworld.md  index.md  modules.md  types.md
example/: arrays_slices.lm  closure_permissions.lm  controlflow.lm  effectful_fun_rollback.lm  example.lm  exception_handling.lm  hellofunc.lm  helloloop.lm  helloworld copy.lm  helloworld.lm  modules_use.lm  permissions.yaml  purity_permissions.lm  structs_classes.lm  switch_match.lm  unsafe_fun_rollback.lm  where_constraints.lm
include/: CMakeLists.txt  lumos.hpp  type.hpp
includes/: abbreviations.md
old/: .gitignore  CMakeLists.txt
old/test/: CMakeLists.txt  lexer.cpp  lumosc.cpp
scripts/: files.py  include_file_extension.py  lumos.py
src/: CMakeLists.txt  ctx.cpp  file.cpp  logger.cpp  obj.cpp
test/: CMakeLists.txt  lexer.cpp  lexer_smoke_test.py  num.cpp
(+156 files in other folders)
